# xdelta3-lib

./: .gitignore
xdelta3/: CMakeLists.txt  xdelta3-internal.h  xdelta3.c  xdelta3.h
